bugfix for zoom on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -182,6 +182,13 @@ body{
 }
 
 @media only screen and (max-width: 83.5em) {
+  input[type="text"],
+  input[type="number"],
+  input[type="email"],
+  input[type="tel"],
+  input[type="password"] {
+    font-size: 16px;
+  }
 
   .new-todo {
     display: flex;
